--- a/Source/Panama/View/EditControls/AlertEdit.xaml
+++ b/Source/Panama/View/EditControls/AlertEdit.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:con="clr-namespace:Restless.App.Panama.Controls"
+    xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls"
     mc:Ignorable="d" 
     d:DesignHeight="360" d:DesignWidth="350">
     <Grid>
@@ -31,7 +31,7 @@
         <TextBox Grid.Row="3" Text="{Binding SelectedRow[url]}" />        
         <Label Grid.Row="4">Alert Date</Label>
         <!-- DisplayDate="{Binding SelectedRow[date],Mode=OneWay}" -->
-        <con:CalendarExtended
+        <con:RestlessCalendar
             Grid.Row="5"
             Margin="6,0"
             SelectedDateUtc="{Binding SelectedRow[date]}"/>
