--- a/Source/Panama/View/EditControls/SubmissionEditWithTab.xaml
+++ b/Source/Panama/View/EditControls/SubmissionEditWithTab.xaml
@@ -5,11 +5,12 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:r="clr-namespace:Restless.App.Panama.Resources"
-    xmlns:con="clr-namespace:Restless.App.Panama.Controls"
+    xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls"
+    xmlns:conl="clr-namespace:Restless.App.Panama.Controls"
     xmlns:cv="clr-namespace:Restless.Tools.Converters;assembly=Restless.Tools.Utility"
     mc:Ignorable="d" 
     d:DesignHeight="600" d:DesignWidth="498">
-    <con:TabControlExtended>
+    <conl:TabControlExtended>
         <TabControl.Items>
             <!-- Main data: flags, fees, notes -->
             <TabItem Header="{x:Static r:Strings.HeaderData}">
@@ -44,7 +45,7 @@
             <TabItem Header="{x:Static r:Strings.HeaderDates}">
                 <StackPanel>
                     <Expander Header="{Binding Submitted.Header}" IsExpanded="False">
-                        <con:CalendarExtended SelectedDateUtc="{Binding Submitted.SubmittedDate}" />
+                        <con:RestlessCalendar SelectedDateUtc="{Binding Submitted.SubmittedDate}" />
                     </Expander>
 
                     <Expander Header="{Binding Response.Header}" IsExpanded="False">
@@ -58,7 +59,7 @@
                             </Grid.RowDefinitions>
                             <StackPanel Grid.Column="0">
                                 <Label>Date</Label>
-                                <con:CalendarExtended SelectedDateUtc="{Binding Response.ResponseDate}" />
+                                <con:RestlessCalendar SelectedDateUtc="{Binding Response.ResponseDate}" />
                             </StackPanel>
                             <StackPanel Grid.Column="1">
                                 <Label>Type</Label>
@@ -84,7 +85,7 @@
                     <DataGrid x:Name="grid1" Style="{StaticResource DataGridEdit}" ItemsSource="{Binding Path=Titles.DataView}" SelectedItem="{Binding Titles.SelectedItem}" con:DataGridColumns.Columns="{Binding Titles.Columns}">
                         <DataGrid.RowStyle>
                             <Style TargetType="DataGridRow">
-                                <Setter Property="con:DataGridExtended.DoubleClickCommand" Value="{Binding ElementName=grid1, Path=DataContext.Titles.OpenRowCommand}"/>
+                                <Setter Property="conl:DataGridExtended.DoubleClickCommand" Value="{Binding ElementName=grid1, Path=DataContext.Titles.OpenRowCommand}"/>
                             </Style>
                         </DataGrid.RowStyle>
                     </DataGrid>
@@ -110,7 +111,7 @@
                     <DataGrid DockPanel.Dock="Top" x:Name="grid2" Style="{StaticResource DataGridEdit}" ItemsSource="{Binding Path=Documents.DataView}" SelectedItem="{Binding Documents.SelectedItem}" con:DataGridColumns.Columns="{Binding Documents.Columns}">
                         <DataGrid.RowStyle>
                             <Style TargetType="DataGridRow">
-                                <Setter Property="con:DataGridExtended.DoubleClickCommand" Value="{Binding ElementName=grid2, Path=DataContext.Documents.OpenRowCommand}"/>
+                                <Setter Property="conl:DataGridExtended.DoubleClickCommand" Value="{Binding ElementName=grid2, Path=DataContext.Documents.OpenRowCommand}"/>
                             </Style>
                         </DataGrid.RowStyle>
                     </DataGrid>
@@ -162,7 +163,7 @@
                         con:DataGridColumns.Columns="{Binding Messages.Columns}">
                         <DataGrid.RowStyle>
                             <Style TargetType="DataGridRow">
-                                <Setter Property="con:DataGridExtended.DoubleClickCommand" Value="{Binding ElementName=grid3, Path=DataContext.Messages.OpenRowCommand}"/>
+                                <Setter Property="conl:DataGridExtended.DoubleClickCommand" Value="{Binding ElementName=grid3, Path=DataContext.Messages.OpenRowCommand}"/>
                             </Style>
                         </DataGrid.RowStyle>
                         <DataGrid.ContextMenu>
@@ -236,5 +237,5 @@
                 </Grid>
             </TabItem>
         </TabControl.Items>
-    </con:TabControlExtended>
+    </conl:TabControlExtended>
 </UserControl>
