--- a/Source/Panama/View/Windows/AboutWindow.xaml
+++ b/Source/Panama/View/Windows/AboutWindow.xaml
@@ -2,7 +2,7 @@
     x:Class="Restless.App.Panama.View.AboutWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:con="clr-namespace:Restless.App.Panama.Controls"
+    xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls"
     xmlns:r="clr-namespace:Restless.App.Panama.Resources"
     Title="About" 
     Height="440" Width="586" 
@@ -22,8 +22,8 @@
                 <Setter Property="Margin" Value="4"/>
                 <Setter Property="TextWrapping" Value="Wrap"/>
             </Style>
-            <Style TargetType="con:KeyValueDisplay">
-                <Setter Property="Margin" Value="0"/>
+            <Style TargetType="con:KeyValue">
+                <Setter Property="Margin" Value="0,2"/>
                 <Setter Property="HeaderFontSize" Value="13"/>
                 <Setter Property="HeaderWidth" Value="84"/>
                 <Setter Property="HeaderForeground" Value="DarkBlue"/>
@@ -35,23 +35,23 @@
         </Grid.Resources>
         <StackPanel Grid.Column="0">
 
-            <con:KeyValueDisplay Header="Product">
-                <con:KeyValueDisplay.Value>
+            <con:KeyValue Header="Product">
+                <con:KeyValue.Value>
                     <MultiBinding StringFormat="{}{0} {1}" Mode="OneTime">
                         <Binding Path="AppInfo.Assembly.Title" />
                         <Binding Path="AppInfo.Assembly.VersionMajor" />
                     </MultiBinding>
-                </con:KeyValueDisplay.Value>
-            </con:KeyValueDisplay>
+                </con:KeyValue.Value>
+            </con:KeyValue>
             
-            <con:KeyValueDisplay Header="Build Date" Value="{Binding AppInfo.BuildDate, Mode=OneTime}"/>
-            <con:KeyValueDisplay Header="Company" Value="{Binding AppInfo.Assembly.Company, Mode=OneTime}"/>
-            <con:KeyValueDisplay Header="Copyright" Value="{Binding AppInfo.Assembly.Copyright, Mode=OneTime}"/>
-            <con:KeyValueDisplay Header="Description" Value="{Binding AppInfo.Assembly.Description, Mode=OneTime}"/>
-            <con:KeyValueDisplay Header="Framework" Value="{Binding AppInfo.Assembly.FrameworkVersion, Mode=OneTime}"/>
-            <con:KeyValueDisplay Header="Executable" Value="{Binding AppInfo.Assembly.Location, Mode=OneTime}"/>
-            <con:KeyValueDisplay Header="64 Bit" Value="{Binding AppInfo.Is64Bit, Mode=OneTime}"/>
-            <con:KeyValueDisplay Header="Database" Value="{Binding AppInfo.DatabaseFileName, Mode=OneTime}"/>
+            <con:KeyValue Header="Build Date" Value="{Binding AppInfo.BuildDate, Mode=OneTime}"/>
+            <con:KeyValue Header="Company" Value="{Binding AppInfo.Assembly.Company, Mode=OneTime}"/>
+            <con:KeyValue Header="Copyright" Value="{Binding AppInfo.Assembly.Copyright, Mode=OneTime}"/>
+            <con:KeyValue Header="Description" Value="{Binding AppInfo.Assembly.Description, Mode=OneTime}"/>
+            <con:KeyValue Header="Framework" Value="{Binding AppInfo.Assembly.FrameworkVersion, Mode=OneTime}"/>
+            <con:KeyValue Header="Executable" Value="{Binding AppInfo.Assembly.Location, Mode=OneTime}"/>
+            <con:KeyValue Header="64 Bit" Value="{Binding AppInfo.Is64Bit, Mode=OneTime}"/>
+            <con:KeyValue Header="Database" Value="{Binding AppInfo.DatabaseFileName, Mode=OneTime}"/>
             
             <Grid Margin="16,20">
                 <Grid.ColumnDefinitions>
