Remove custom data grid and use from the library. Large update.

--- a/Source/Panama/View/EditControls/CredentialEdit.xaml
+++ b/Source/Panama/View/EditControls/CredentialEdit.xaml
@@ -5,7 +5,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
-    xmlns:con="clr-namespace:Restless.App.Panama.Controls" 
+    xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls" 
     mc:Ignorable="d" 
     d:DesignHeight="340" d:DesignWidth="360">
     <Border>
