--- a/Source/Panama/Resources/Dictionary/DataGrid.xaml
+++ b/Source/Panama/Resources/Dictionary/DataGrid.xaml
@@ -2,9 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
-    xmlns:cv="clr-namespace:Restless.App.Panama.Converters"
-    xmlns:vm="clr-namespace:Restless.App.Panama.ViewModel"
-    xmlns:con="clr-namespace:Restless.App.Panama.Controls">
+    xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls">
 
     <!-- Min data grid row height. See also: Config.DataGrid.MinRowHeight -->
     <sys:Double x:Key="DataGridMinRowHeight">24</sys:Double>
@@ -166,7 +164,7 @@
         <Setter Property="AlternatingRowBackground" Value="#FFDFDFDF"/>
     </Style>
 
-    <Style TargetType="{x:Type con:DataGridExtended}" BasedOn="{StaticResource {x:Type DataGrid}}">
+    <Style TargetType="{x:Type con:RestlessDataGrid}" BasedOn="{StaticResource {x:Type DataGrid}}">
 
     </Style>
 
