--- a/Source/Panama/View/EditControls/TableDetail.xaml
+++ b/Source/Panama/View/EditControls/TableDetail.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:con="clr-namespace:Restless.App.Panama.Controls"    
+    xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls"    
     mc:Ignorable="d" 
     d:DesignHeight="300" d:DesignWidth="300">
     <Border>
