--- a/Source/Panama/View/EditControls/TitleEditVersion.xaml
+++ b/Source/Panama/View/EditControls/TitleEditVersion.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:con="clr-namespace:Restless.App.Panama.Controls"
+    xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:cv="clr-namespace:Restless.App.Panama.Converters"
     xmlns:r="clr-namespace:Restless.App.Panama.Resources"
@@ -16,7 +16,7 @@
             Style="{StaticResource TextBlockError}"
             Text="No versions have been created for this title. Use the File button to add a version."
             Visibility="{Binding Versions.DataViewCount,Converter={cv:IntegerToVisibilityConverter},ConverterParameter={StaticResource Int32One}}" />
-        <con:DataGridExtended 
+        <con:RestlessDataGrid 
             x:Name="grid" 
             Style="{StaticResource DataGridEdit}"
             MaxHeight="{x:Static sys:Double.PositiveInfinity}" 
@@ -32,7 +32,7 @@
             </DataGrid.ContextMenu>            
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
-                    <Setter Property="con:DataGridExtended.DoubleClickCommand" Value="{Binding ElementName=grid, Path=DataContext.Versions.OpenRowCommand}"/>
+                    <Setter Property="con:RestlessDataGrid.DoubleClickCommand" Value="{Binding ElementName=grid, Path=DataContext.Versions.OpenRowCommand}"/>
                 </Style>
             </DataGrid.RowStyle>
             <DataGrid.GroupStyle>
@@ -49,7 +49,7 @@
                     </GroupStyle.HeaderTemplate>
                 </GroupStyle>
             </DataGrid.GroupStyle>
-        </con:DataGridExtended>
+        </con:RestlessDataGrid>
         <ToolBarTray>
             <ToolBar Style="{StaticResource ToolBarCommandHolder}">
                 <Button Command="{Binding Versions.Commands[VersionMoveUp]}" Content="{StaticResource ImageArrowUpTool}" ToolTip="Move the selected version up"/>
