--- a/Source/Panama/View/PublisherView.xaml
+++ b/Source/Panama/View/PublisherView.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:cv="clr-namespace:Restless.App.Panama.Converters"
-    xmlns:con="clr-namespace:Restless.App.Panama.Controls"
+    xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls"
     xmlns:config="clr-namespace:Restless.App.Panama.Configuration"
     xmlns:view="clr-namespace:Restless.App.Panama.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -36,7 +36,7 @@
 
         <!-- Main data grid to display the tabular data  -->
         <Border Grid.Row="1" Grid.Column="0" Style="{StaticResource BorderGridContainer}">
-            <con:DataGridExtended 
+            <con:RestlessDataGrid 
                 x:Name="PublisherDataGrid" 
                 Grid.Row="1" Grid.Column="0" 
                 RowHeight="{Binding Config.DataGridRowHeight}"
@@ -46,13 +46,13 @@
                 <DataGrid.RowStyle>
                     <!-- Base style contains all the triggers -->
                     <Style TargetType="DataGridRow" BasedOn="{StaticResource PublisherDataGridRowStyle}">
-                        <Setter Property="con:DataGridExtended.DoubleClickCommand" Value="{Binding ElementName=PublisherDataGrid, Path=DataContext.OpenRowCommand}"/>
+                        <Setter Property="con:RestlessDataGrid.DoubleClickCommand" Value="{Binding ElementName=PublisherDataGrid, Path=DataContext.OpenRowCommand}"/>
                     </Style>
                 </DataGrid.RowStyle>
                 <DataGrid.ContextMenu>
                     <ContextMenu ItemsSource="{Binding MenuItems}"/>
                 </DataGrid.ContextMenu>
-            </con:DataGridExtended>
+            </con:RestlessDataGrid>
         </Border>
         <!-- Splitter -->
         <GridSplitter Grid.Row="1" Grid.Column="1" Style="{StaticResource GridSplitterVertical}" />
