--- a/Source/Panama/View/SubmissionView.xaml
+++ b/Source/Panama/View/SubmissionView.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:cv="clr-namespace:Restless.App.Panama.Converters"
-    xmlns:con="clr-namespace:Restless.App.Panama.Controls"
+    xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls"
     xmlns:view="clr-namespace:Restless.App.Panama.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -30,7 +30,7 @@
 
         <!-- Main data grid to display the tabular data -->
         <Border Grid.Row="1" Grid.Column="0" Style="{StaticResource BorderGridContainer}">
-            <con:DataGridExtended 
+            <con:RestlessDataGrid 
                 x:Name="grid"
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding Path=MainSource.View}"
@@ -39,7 +39,7 @@
                 <DataGrid.ContextMenu>
                     <ContextMenu ItemsSource="{Binding MenuItems}"/>
                 </DataGrid.ContextMenu>
-            </con:DataGridExtended>
+            </con:RestlessDataGrid>
         </Border>
 
         <!-- Splitter -->
