--- a/Source/Panama/View/TableView.xaml
+++ b/Source/Panama/View/TableView.xaml
@@ -2,9 +2,8 @@
     x:Class="Restless.App.Panama.View.TableView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:vw="clr-namespace:Restless.App.Panama.View"
     xmlns:cv="clr-namespace:Restless.App.Panama.Converters"    
-    xmlns:con="clr-namespace:Restless.App.Panama.Controls"    
+    xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls"    
     xmlns:view="clr-namespace:Restless.App.Panama.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
