--- a/Source/Panama/View/TitleView.xaml
+++ b/Source/Panama/View/TitleView.xaml
@@ -3,7 +3,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:view="clr-namespace:Restless.App.Panama.View"
-    xmlns:con="clr-namespace:Restless.App.Panama.Controls"
+    xmlns:conl="clr-namespace:Restless.App.Panama.Controls"
+    xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls"
+    
     xmlns:cv="clr-namespace:Restless.App.Panama.Converters"
     xmlns:tab="clr-namespace:Restless.App.Panama.Database.Tables;assembly=Panama.Database"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -38,7 +40,7 @@
 
         <!-- Main data grid to display the tabular data -->
         <Border Grid.Row="1" Grid.Column="0" Style="{StaticResource BorderGridContainer}">
-            <con:DataGridExtended 
+            <con:RestlessDataGrid 
                 x:Name="TitleDataGrid"
                 Grid.Row="1" Grid.Column="0"
                 RowHeight="{Binding Config.DataGridRowHeight}"
@@ -48,14 +50,14 @@
                 <DataGrid.RowStyle>
                     <!-- Base style contains all the triggers -->
                     <Style TargetType="DataGridRow" BasedOn="{StaticResource TitleDataGridRowStyle}">
-                        <Setter Property="con:DataGridExtended.DoubleClickCommand" Value="{Binding ElementName=TitleDataGrid, Path=DataContext.OpenRowCommand}"/>
+                        <Setter Property="con:RestlessDataGrid.DoubleClickCommand" Value="{Binding ElementName=TitleDataGrid, Path=DataContext.OpenRowCommand}"/>
                     </Style>
                 </DataGrid.RowStyle>
 
                 <DataGrid.ContextMenu>
                     <ContextMenu ItemsSource="{Binding MenuItems}"/>
                 </DataGrid.ContextMenu>
-            </con:DataGridExtended>
+            </con:RestlessDataGrid>
         </Border>
 
         <!-- Splitter -->
