--- a/Source/Panama/View/UserNoteView.xaml
+++ b/Source/Panama/View/UserNoteView.xaml
@@ -2,7 +2,7 @@
     x:Class="Restless.App.Panama.View.UserNoteView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:con="clr-namespace:Restless.App.Panama.Controls"
+    xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls"
     xmlns:view="clr-namespace:Restless.App.Panama.View"    
     xmlns:tab="clr-namespace:Restless.App.Panama.Database.Tables;assembly=Panama.Database"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
