--- a/Source/Panama/View/Windows/AlertWindow.xaml
+++ b/Source/Panama/View/Windows/AlertWindow.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:r="clr-namespace:Restless.App.Panama.Resources"
-    xmlns:con="clr-namespace:Restless.App.Panama.Controls"
+    xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls"
     Title="Alerts" 
     Height="360" Width="532" 
     ResizeMode="NoResize" 
@@ -29,7 +29,7 @@
             </Style>
         </Grid.Resources>
 
-        <con:DataGridExtended
+        <con:RestlessDataGrid
             x:Name="AlertDataGrid" 
             Grid.ColumnSpan="2"
             ItemsSource="{Binding Path=Alerts}"
@@ -37,13 +37,13 @@
             con:DataGridColumns.Columns="{Binding Columns}">
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
-                    <Setter Property="con:DataGridExtended.DoubleClickCommand" Value="{Binding ElementName=AlertDataGrid, Path=DataContext.Commands[OpenUrl]}"/>
+                    <Setter Property="con:RestlessDataGrid.DoubleClickCommand" Value="{Binding ElementName=AlertDataGrid, Path=DataContext.Commands[OpenUrl]}"/>
                 </Style>
             </DataGrid.RowStyle>
             <DataGrid.ContextMenu>
                 <ContextMenu ItemsSource="{Binding MenuItems}"/>
             </DataGrid.ContextMenu>
-        </con:DataGridExtended>
+        </con:RestlessDataGrid>
         
         <TextBlock Grid.Row="1" Style="{StaticResource TextBlockLabel}" Margin="2" Text="Postpone"/>
         <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="2,4">
