--- a/Source/Panama/View/Windows/MessageFileSelectWindow.xaml
+++ b/Source/Panama/View/Windows/MessageFileSelectWindow.xaml
@@ -2,7 +2,7 @@
     x:Class="Restless.App.Panama.View.MessageFileSelectWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:con="clr-namespace:Restless.App.Panama.Controls"
+    xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls"
     Height="600" Width="1060" ShowInTaskbar="False" 
     ResizeMode="NoResize"
     WindowStartupLocation="CenterOwner">
@@ -28,14 +28,14 @@
 
         <!-- Main data grid to display the tabular data  -->
         <Border Grid.Row="1" Style="{StaticResource BorderGridContainer}">
-            <con:DataGridExtended 
+            <con:RestlessDataGrid 
                 x:Name="grid"
                 SelectionMode="Extended"
                 SelectedItemsList="{Binding SelectedDataGridItems, Mode=OneWayToSource}"
                 ItemsSource="{Binding Path=MainSource.View}"
                 SelectedItem="{Binding SelectedItem}" 
                 con:DataGridColumns.Columns="{Binding Columns}">
-            </con:DataGridExtended>
+            </con:RestlessDataGrid>
         </Border>
 
         <StackPanel Grid.Row="2" Style="{StaticResource StackPanelCommandHolder}" Margin="4">
