--- a/Source/Panama/View/Windows/MessageSelectWindow.xaml
+++ b/Source/Panama/View/Windows/MessageSelectWindow.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:view="clr-namespace:Restless.App.Panama.View"
-    xmlns:con="clr-namespace:Restless.App.Panama.Controls"
+    xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls"
     xmlns:cv="clr-namespace:Restless.App.Panama.Converters"
     Height="600" Width="1060" ShowInTaskbar="False" 
     WindowStartupLocation="CenterOwner">
@@ -22,7 +22,7 @@
         <!-- Main data grid to display the tabular data  -->
 
         <Border Style="{StaticResource BorderGridContainer}">
-            <con:DataGridExtended 
+            <con:RestlessDataGrid 
                 x:Name="grid"
                 Grid.ColumnSpan="{Binding IsMessageSelectMode,Mode=OneTime,Converter={cv:BooleanToIntegerConverter},ConverterParameter={StaticResource Integer1}}"
                 SelectionMode="{Binding IsMessageSelectMode, Converter={cv:BooleanToSelectionModeConverter}}"
@@ -32,10 +32,10 @@
                 con:DataGridColumns.Columns="{Binding Columns}">
                 <DataGrid.RowStyle>
                     <Style TargetType="DataGridRow">
-                        <Setter Property="con:DataGridExtended.DoubleClickCommand" Value="{Binding ElementName=grid, Path=DataContext.Commands[OpenItem]}"/>
+                        <Setter Property="con:RestlessDataGrid.DoubleClickCommand" Value="{Binding ElementName=grid, Path=DataContext.Commands[OpenItem]}"/>
                     </Style>
                 </DataGrid.RowStyle>
-            </con:DataGridExtended>
+            </con:RestlessDataGrid>
         </Border>
         <Border Grid.Column="1" Style="{StaticResource BorderGridContainer}">
             <StackPanel Visibility="{Binding IsMessageSelectMode, Mode=OneTime, Converter={cv:BooleanToVisibilityConverter}}">
