Use MVVM base classes from library. Rename WorkspaceViewMode to ApplicationViewModel.

--- a/Source/Panama/Resources/Dictionary/Main.xaml
+++ b/Source/Panama/Resources/Dictionary/Main.xaml
@@ -44,7 +44,7 @@
                 VerticalAlignment="Top"
                 Style="{StaticResource ToolBarButton}">
             </Button>
-            <ContentPresenter Content="{Binding Path=TabDisplayName}" />
+            <ContentPresenter Content="{Binding Path=DisplayName}" />
         </DockPanel>
     </DataTemplate>
 
