--- a/Source/Panama/View/Windows/AboutWindow.xaml
+++ b/Source/Panama/View/Windows/AboutWindow.xaml
@@ -3,21 +3,20 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:con="clr-namespace:Restless.Tools.Controls;assembly=Restless.Tools.Controls"
+    xmlns:cv="clr-namespace:Restless.Tools.Converters;assembly=Restless.Tools.Utility"
     xmlns:r="clr-namespace:Restless.App.Panama.Resources"
     Title="About" 
     Height="440" Width="586" 
     ResizeMode="NoResize" 
     ShowInTaskbar="False" 
+    Background="{StaticResource HorizontalLightBrush}"
     WindowStartupLocation="CenterScreen">
-    
-    <Grid Background="{StaticResource HorizontalLightBrush}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.Resources>
+
+    <StackPanel Margin="8">
+        <StackPanel.Resources>
             <Style TargetType="StackPanel">
                 <Setter Property="Margin" Value="4"/>
-            </Style>          
+            </Style>
             <Style TargetType="TextBlock">
                 <Setter Property="Margin" Value="4"/>
                 <Setter Property="TextWrapping" Value="Wrap"/>
@@ -32,35 +31,34 @@
                 <Setter Property="ValueForeground" Value="#FF818181"/>
                 <Setter Property="ValueVerticalAlignment" Value="Top"/>
             </Style>
-        </Grid.Resources>
-        <StackPanel Grid.Column="0">
+        </StackPanel.Resources>
 
-            <con:KeyValue Header="Product">
-                <con:KeyValue.Value>
-                    <MultiBinding StringFormat="{}{0} {1}" Mode="OneTime">
-                        <Binding Path="AppInfo.Assembly.Title" />
-                        <Binding Path="AppInfo.Assembly.VersionMajor" />
-                    </MultiBinding>
-                </con:KeyValue.Value>
-            </con:KeyValue>
-            
-            <con:KeyValue Header="Build Date" Value="{Binding AppInfo.BuildDate, Mode=OneTime}"/>
-            <con:KeyValue Header="Company" Value="{Binding AppInfo.Assembly.Company, Mode=OneTime}"/>
-            <con:KeyValue Header="Copyright" Value="{Binding AppInfo.Assembly.Copyright, Mode=OneTime}"/>
-            <con:KeyValue Header="Description" Value="{Binding AppInfo.Assembly.Description, Mode=OneTime}"/>
-            <con:KeyValue Header="Framework" Value="{Binding AppInfo.Assembly.FrameworkVersion, Mode=OneTime}"/>
-            <con:KeyValue Header="Executable" Value="{Binding AppInfo.Assembly.Location, Mode=OneTime}"/>
-            <con:KeyValue Header="64 Bit" Value="{Binding AppInfo.Is64Bit, Mode=OneTime}"/>
-            <con:KeyValue Header="Database" Value="{Binding AppInfo.DatabaseFileName, Mode=OneTime}"/>
-            
-            <Grid Margin="16,20">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <Image Source="{StaticResource ImageTitle}" Height="64"/>
-                <TextBlock Margin="8,0" Grid.Column="1" Text="{x:Static r:Strings.CaptionIconsDesigned1}"/>
-            </Grid>
-        </StackPanel>
-    </Grid>
+        <con:KeyValue Header="Product">
+            <con:KeyValue.Value>
+                <MultiBinding  Converter="{cv:StringConcatenationMultiConverter}" Mode="OneTime">
+                    <Binding Path="AppInfo.Assembly.Title" />
+                    <Binding Path="AppInfo.Assembly.VersionMajor" />
+                </MultiBinding>
+            </con:KeyValue.Value>
+        </con:KeyValue>
+
+        <con:KeyValue Header="Build Date" Value="{Binding AppInfo.BuildDate, Mode=OneTime}"/>
+        <con:KeyValue Header="Company" Value="{Binding AppInfo.Assembly.Company, Mode=OneTime}"/>
+        <con:KeyValue Header="Copyright" Value="{Binding AppInfo.Assembly.Copyright, Mode=OneTime}"/>
+        <con:KeyValue Header="Description" Value="{Binding AppInfo.Assembly.Description, Mode=OneTime}"/>
+        <con:KeyValue Header="Framework" Value="{Binding AppInfo.Assembly.FrameworkVersion, Mode=OneTime}"/>
+        <con:KeyValue Header="Executable" Value="{Binding AppInfo.Assembly.Location, Mode=OneTime}"/>
+        <con:KeyValue Header="64 Bit" Value="{Binding AppInfo.Is64Bit, Mode=OneTime}"/>
+        <con:KeyValue Header="Database" Value="{Binding AppInfo.DatabaseFileName, Mode=OneTime}"/>
+
+        <Grid Margin="16,20">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Image Source="{StaticResource ImageTitle}" Height="64"/>
+            <TextBlock Margin="8,0" Grid.Column="1" Text="{x:Static r:Strings.CaptionIconsDesigned1}"/>
+        </Grid>
+
+    </StackPanel>
 </Window>
