--- a/src/Panama/Resources/Dictionary/TextBlock.xaml
+++ b/src/Panama/Resources/Dictionary/TextBlock.xaml
@@ -65,6 +65,7 @@
 
     <Style TargetType="TextBlock" x:Key="StatusBarNotificationMessage" BasedOn="{StaticResource StatusBar}">
         <Setter Property="Text" Value="{Binding Path=NotificationMessage, NotifyOnTargetUpdated=True}" />
+        <Setter Property="Foreground" Value="Red"/>
         <Style.Triggers>
             <EventTrigger RoutedEvent="Binding.TargetUpdated">
                 <BeginStoryboard>
@@ -72,8 +73,13 @@
                         <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="Opacity">
                             <EasingDoubleKeyFrame KeyTime="0" Value="1"/>
                             <EasingDoubleKeyFrame KeyTime="0:0:5" Value="1"/>
-                            <EasingDoubleKeyFrame KeyTime="0:0:5.5" Value="0"/>
+                            <EasingDoubleKeyFrame KeyTime="0:0:7.5" Value="0"/>
                         </DoubleAnimationUsingKeyFrames>
+                        <ThicknessAnimation From="180,0" To="0" Duration="0:0:1" Storyboard.TargetProperty="Margin">
+                            <ThicknessAnimation.EasingFunction>
+                                <BounceEase Bounces="10" Bounciness="1.5"/>
+                            </ThicknessAnimation.EasingFunction>
+                        </ThicknessAnimation>
                     </Storyboard>
                 </BeginStoryboard>
             </EventTrigger>
