--- a/src/Panama/View/Windows/SubmissionDocumentSelectWindow.xaml
+++ b/src/Panama/View/Windows/SubmissionDocumentSelectWindow.xaml
@@ -47,7 +47,7 @@
             </Grid.RowDefinitions>
             <Button Grid.Column="0" Command="{Binding Commands[CreateDocx]}">Create .docx</Button>
             <Button Grid.Column="1" Command="{Binding Commands[CreatePlaceholder]}">Create placeholder</Button>
-            <Button Grid.Column="2" Command="{Binding CloseCommand}">Cancel</Button>
+            <Button Grid.Column="2" Command="{Binding CloseWindowCommand}">Cancel</Button>
         </Grid>
     </DockPanel>
 </Window>
