--- a/src/Panama/View/Windows/MessageFileSelectWindow.xaml
+++ b/src/Panama/View/Windows/MessageFileSelectWindow.xaml
@@ -40,7 +40,7 @@
 
         <StackPanel Grid.Row="2" Style="{StaticResource StackPanelCommandHolder}" Margin="4">
             <Button Command="{Binding Commands[Select]}">Select</Button>
-            <Button Command="{Binding Commands[Cancel]}">Cancel</Button>
+            <Button Command="{Binding CloseWindowCommand}">Cancel</Button>
         </StackPanel>
 
     </Grid>
