--- a/src/Panama/Resources/Dictionary/PageTemplate.xaml
+++ b/src/Panama/Resources/Dictionary/PageTemplate.xaml
@@ -36,6 +36,11 @@
         <vw:PublisherView />
     </DataTemplate>
 
+    <!-- Template to apply a SelfPublisherView to an instance of the SelfPublisherViewModel class shown in the main window  -->
+    <DataTemplate DataType="{x:Type vm:SelfPublisherViewModel}">
+        <vw:SelfPublisherView />
+    </DataTemplate>
+
     <!-- Template to apply a StatisticsView to an instance of the StatisticsViewModel} class shown in the main window  -->
     <DataTemplate DataType="{x:Type vm:StatisticsViewModel}">
         <vw:StatisticsView />
