--- a/src/Panama/View/EditControls/TitleEditWithTab.xaml
+++ b/src/Panama/View/EditControls/TitleEditWithTab.xaml
@@ -82,9 +82,15 @@
                     <view:TitleEditAddToSubmission/>
                 </StackPanel>
             </TabItem>
+            
             <TabItem Header="{Binding Published.Header}">
                 <view:TitleEditPublished Margin="2,4"/>
             </TabItem>
+
+            <TabItem Header="{Binding SelfPublished.Header}">
+                <view:TitleEditSelfPublished Margin="2,4"/>
+            </TabItem>
+
             <TabItem Header="{x:Static r:Strings.HeaderPreview}">
                 <DockPanel Margin="4">
                     <TextBlock DockPanel.Dock="Top" Style="{StaticResource TextBlockMessage}" Margin="0,2">Text of the latest version of this title</TextBlock>
